[gd_scene load_steps=13 format=3 uid="uid://dsuxlgxtt3mk0"]

[ext_resource type="FontFile" uid="uid://jm44j5tqmgrh" path="res://MainMenu/assets/fonts/SuperPixel-m2L8j.ttf" id="1_3w4mj"]
[ext_resource type="Texture2D" uid="uid://coriakf0bm8b0" path="res://MainMenu/assets/bg.png" id="1_nhkf3"]
[ext_resource type="Script" uid="uid://7yklmgygey73" path="res://MainMenu/main_menu.gd" id="2_ajn5b"]
[ext_resource type="Texture2D" uid="uid://57fat35v24tt" path="res://MainMenu/assets/title-game.webp" id="3_5de1l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ajn5b"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5de1l"]
content_margin_left = 8.0
content_margin_top = 8.0
content_margin_right = 8.0
content_margin_bottom = 8.0
bg_color = Color(0.94902, 0.870588, 0.658824, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3w4mj"]
bg_color = Color(0.6, 0.6, 0.6, 0)
expand_margin_left = 8.0
expand_margin_top = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_po2gx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbpwf"]
bg_color = Color(0.0705882, 0, 0, 0.917647)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.94902, 0.870588, 0.658824, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_5de1l"]
default_font = ExtResource("1_3w4mj")
default_font_size = 32
Button/colors/font_color = Color(0.949744, 0.870445, 0.657724, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/styles/focus = SubResource("StyleBoxFlat_ajn5b")
Button/styles/hover = SubResource("StyleBoxFlat_5de1l")
Button/styles/normal = SubResource("StyleBoxFlat_3w4mj")
Button/styles/pressed = SubResource("StyleBoxFlat_po2gx")
PopupPanel/styles/panel = SubResource("StyleBoxFlat_kbpwf")

[sub_resource type="Theme" id="Theme_ajn5b"]
default_font_size = 20

[sub_resource type="Theme" id="Theme_po2gx"]
default_font_size = 32

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_5de1l")
script = ExtResource("2_ajn5b")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_nhkf3")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="VBoxContainer" parent="Center"]
layout_mode = 2
alignment = 1

[node name="TitleGame" type="TextureRect" parent="Center/MenuButton"]
custom_minimum_size = Vector2(380, 95)
layout_mode = 2
texture = ExtResource("3_5de1l")
expand_mode = 1
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="Center/MenuButton"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="ButtonVBox" type="VBoxContainer" parent="Center/MenuButton"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 18
alignment = 1

[node name="NewGameButton" type="Button" parent="Center/MenuButton/ButtonVBox"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="Center/MenuButton/ButtonVBox"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
text = "Continue"

[node name="OptionsButton" type="Button" parent="Center/MenuButton/ButtonVBox"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="Center/MenuButton/ButtonVBox"]
custom_minimum_size = Vector2(280, 50)
layout_mode = 2
text = "Exit"

[node name="OptionsPopUp" type="PopupPanel" parent="."]
size = Vector2i(300, 223)
visible = true
theme = SubResource("Theme_ajn5b")

[node name="CenterContainer" type="CenterContainer" parent="OptionsPopUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPopUp/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="OptionsPopUp/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_po2gx")
text = "OPTIONS"

[node name="MarginContainer" type="MarginContainer" parent="OptionsPopUp/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPopUp/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="MusicButton" type="Button" parent="OptionsPopUp/CenterContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "Music : on"

[node name="CloseButton" type="Button" parent="OptionsPopUp/CenterContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Center/MenuButton/ButtonVBox/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Center/MenuButton/ButtonVBox/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="OptionsPopUp/CenterContainer/VBoxContainer/VBoxContainer/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="OptionsPopUp/CenterContainer/VBoxContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
